--- a/drawer-modules/build.gradle
+++ b/drawer-modules/build.gradle
@@ -53,6 +53,8 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.0-beta01'
 
     testImplementation 'junit:junit:4.13.1'
+    androidTestImplementation "androidx.ui:ui-test:$compose_version"
+
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 }
