--- a/drawer-base/build.gradle
+++ b/drawer-base/build.gradle
@@ -29,6 +29,9 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
         useIR = true
+        freeCompilerArgs += '-Xopt-in=kotlin.RequiresOptIn'
+        freeCompilerArgs += '-Xopt-in=kotlin.Experimental'
+        freeCompilerArgs += '-Xuse-experimental=kotlin.Experimental'
     }
     buildFeatures {
         compose true
