--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,10 @@ allprojects {
     repositories {
         google()
         jcenter()
+        maven {
+            url "https://jitpack.io"
+            content { includeGroupByRegex "com\\.github.*" }
+        }
     }
 }
 
