--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,6 +51,9 @@ dependencies {
     implementation "com.airbnb.android:showkase:1.0.0-alpha03"
     kapt "com.airbnb.android:showkase-processor:1.0.0-alpha03"
 
+    implementation 'com.github.ChuckerTeam.Chucker:library:3.3.0'
+    implementation 'com.squareup.leakcanary:leakcanary-android:2.4'
+
     implementation 'androidx.core:core-ktx:1.3.2'
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.2.1'
