--- a/developer-shortcuts/build.gradle
+++ b/developer-shortcuts/build.gradle
@@ -52,6 +52,9 @@ dependencies {
     compileOnly "com.airbnb.android:showkase:1.0.0-alpha03"
     kapt "com.airbnb.android:showkase-processor:1.0.0-alpha03"
 
+    compileOnly 'com.github.ChuckerTeam.Chucker:library:3.3.0'
+    compileOnly 'com.squareup.leakcanary:leakcanary-android:2.4'
+
     implementation 'androidx.core:core-ktx:1.3.2'
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.2.1'
