--- a/navigation-module/build.gradle
+++ b/navigation-module/build.gradle
@@ -1,20 +1,19 @@
 plugins {
-    id 'com.android.application'
+    id 'com.android.library'
     id 'kotlin-android'
-    id 'kotlin-kapt'
 }
 
 android {
     compileSdkVersion 30
 
     defaultConfig {
-        applicationId "com.alorma.composedrawer"
         minSdkVersion 23
         targetSdkVersion 30
         versionCode 1
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        consumerProguardFiles "consumer-rules.pro"
     }
 
     buildTypes {
@@ -30,6 +29,9 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
         useIR = true
+        freeCompilerArgs += '-Xopt-in=kotlin.RequiresOptIn'
+        freeCompilerArgs += '-Xopt-in=kotlin.Experimental'
+        freeCompilerArgs += '-Xuse-experimental=kotlin.Experimental'
     }
     buildFeatures {
         compose true
@@ -43,16 +45,7 @@ android {
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
 
-    implementation project(":drawer-modules")
     implementation project(":drawer-base")
-    implementation project(":developer-shortcuts")
-    implementation project(":navigation-module")
-
-    implementation "com.airbnb.android:showkase:1.0.0-alpha03"
-    kapt "com.airbnb.android:showkase-processor:1.0.0-alpha03"
-
-    implementation 'com.github.ChuckerTeam.Chucker:library:3.3.0'
-    implementation 'com.squareup.leakcanary:leakcanary-android:2.4'
 
     implementation 'androidx.core:core-ktx:1.3.2'
     implementation 'androidx.appcompat:appcompat:1.2.0'
@@ -67,6 +60,8 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.0-beta01'
 
     testImplementation 'junit:junit:4.13.1'
+    androidTestImplementation "androidx.ui:ui-test:$compose_version"
+
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 }
