--- a/developer-shortcuts/build.gradle
+++ b/developer-shortcuts/build.gradle
@@ -38,8 +38,8 @@ android {
         compose true
     }
     composeOptions {
-        kotlinCompilerExtensionVersion compose_version
-        kotlinCompilerVersion '1.4.10'
+        kotlinCompilerExtensionVersion "1.0.0-alpha09"
+        kotlinCompilerVersion '1.4.21'
     }
 }
 
@@ -60,13 +60,13 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.3.2'
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.2.1'
-    implementation "androidx.compose.ui:ui:$compose_version"
-    implementation "androidx.compose.material:material:$compose_version"
-    implementation "androidx.ui:ui-tooling:$compose_version"
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.0-beta01'
+    implementation "androidx.compose.ui:ui:1.0.0-alpha09"
+    implementation "androidx.compose.material:material:1.0.0-alpha09"
+    implementation "androidx.ui:ui-tooling:1.0.0-alpha07"
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.0-rc01'
 
     testImplementation 'junit:junit:4.13.1'
-    androidTestImplementation "androidx.ui:ui-test:$compose_version"
+    androidTestImplementation "androidx.ui:ui-test:1.0.0-alpha07"
 
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
