--- a/drawer-modules/build.gradle
+++ b/drawer-modules/build.gradle
@@ -43,7 +43,7 @@ android {
 }
 
 dependencies {
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:1.4.21"
 
     implementation project(":drawer-base")
 
